# tank

./: .gitignore  Cargo.toml  README.md  publish.sh
.github/workflows/: deploy.yml
docs/: 1-introduction.md  2-getting-started.md  3-connection.md  3-entity-definition.md  4-entity-definition.md  4-entity-operations.md  4-types.md  5-entity-definition.md  5-entity-operations.md  5-join-operations.md  6-entity-operations.md  6-join-operations.md  6-types.md  7-advanced-operations.md  7-join-operations.md  8-driver.md  8-drivers.md  8-raw-sql.md  9-drivers.md  data-retrieval.md  docs.md  entity-definition.md  getting-started.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mjs
docs/.vitepress/theme/: index.js  style.css
macros/: Cargo.toml
macros/src/: decode_fields.rs  lib.rs
metadata/: Cargo.toml
metadata/src/: column_def.rs  data_type.rs  interval.rs  lib.rs  table_like.rs  table_ref.rs  value.rs
src/: backend.rs  column.rs  driver.rs  entity.rs  executor.rs  lib.rs  query.rs  sql.rs  write_sql.rs
src/statement/: create_table_fragment.rs  from_fragment.rs  initial_status.rs  mod.rs  select_fragment.rs  statement.rs  status.rs  where_fragment.rs
tank-core/: Cargo.toml
tank-core/src/: as_value.rs  column.rs  column_def.rs  connection.rs  data_set.rs  decode_type.rs  driver.rs  entity.rs  executor.rs  expression.rs  interval.rs  join.rs  lib.rs  llexpression.rs  parse.rs  prepared.rs  query.rs  relations.rs  sql_writer.rs  table_ref.rs  transaction.rs  util.rs  value.rs
tank-core/src/expression/: binary_op.rs  expression.rs  mod.rs  op_precedence.rs  operand.rs  ordered.rs  unary_op.rs
tank-core/src/writer/: context.rs  mod.rs  sql_writer.rs
tank-core/tests/: interval.rs  value.rs
tank-duckdb/: Cargo.toml  README.md
tank-duckdb/src/: cbox.rs  connection.rs  conversions.rs  driver.rs  extract.rs  extract_value.rs  lib.rs  prepared.rs  query.rs  sql_writer.rs  transaction.rs  utility.rs
tank-duckdb/tests/: connection.rs  duckdb.rs  tests.rs  trade_execution.rs
tank-duckdb/tests/resource/: trade.rs
tank-macros/: Cargo.toml
tank-macros/src/: cols.rs  column_enum.rs  column_trait.rs  decode_column.rs  decode_expression.rs  decode_fields.rs  decode_join.rs  decode_table.rs  encode_column_def.rs  encode_column_ref.rs  expression.rs  frag_evaluated.rs  from_row_trait.rs  lib.rs  schema_name.rs  table_name.rs  table_primary_key.rs
tank-metadata/: Cargo.toml
tank-metadata/src/: column_def.rs  connection.rs  entity.rs  executor.rs  expression.rs  lib.rs  value.rs
tank-mysql/: Cargo.toml
tank-mysql/src/: connection.rs  driver.rs  executor.rs  lib.rs  prepared.rs  row_wrap.rs  sql_writer.rs  transaction.rs  value_wrap.rs
tank-mysql/tests/: init.rs  mysql.rs
tank-postgres/: Cargo.toml  README.md
tank-postgres/src/: connection.rs  driver.rs  interval_wrap.rs  lib.rs  prepared.rs  sql_writer.rs  transaction.rs  util.rs  value_holder.rs  value_wrap.rs
tank-postgres/tests/: init.rs  postgres.rs
tank-postgres/tests/assets/: 00-ssl-setup.sh  00-ssl.sh  ca.crt  client.crt  pg_hba.conf  root.crt  server.crt  server.csr  server.key
tank-sqlite/: Cargo.toml  README.md
tank-sqlite/src/: cbox.rs  connection.rs  driver.rs  extract.rs  lib.rs  prepared.rs  sql_writer.rs  transaction.rs
tank-sqlite/tests/: connection.rs  sqlite.rs
tank-tests/: Cargo.toml  README.md
tank-tests/src/: aggregate.rs  aggregate_functions.rs  aggregates.rs  array.rs  arrays1.rs  arrays2.rs  average.rs  books.rs  complex.rs  documentation.rs  full1.rs  insane.rs  interval.rs  lib.rs  limits.rs  multiple.rs  nullability.rs  operations.rs  readme.rs  shopping.rs  simple.rs  trade.rs  trade_test.rs  transaction1.rs  user.rs
tank-tests/src/resource/: trade.rs
tank-yourdb/: Cargo.toml
tank-yourdb/src/: connection.rs  driver.rs  lib.rs  prepared.rs  sql_writer.rs  transaction.rs
tank-yourdb/tests/: yourdb.rs
tests/: column.rs  customer.rs  employee.rs  entity.rs  entity_odd.rs  entity_simple.rs  expression.rs  interval.rs  join.rs  odd_entity.rs  product.rs  select.rs  simple_entity.rs  sql.rs  trade.rs  value.rs  weird_entity.rs
tests/resource/: trade.rs
