[workspace]
members = [
    ".",
    "tank-core",
    "tank-duckdb",
    "tank-macros",
    "tank-tests",
]

[workspace.package]
version = "0.1.0"
authors = ["barsdeveloper <barsdeveloper@gmail.com>"]
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/barsdeveloper/tank"
categories = ["database"]

[workspace.dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
convert_case = "0.7.1"
futures = "0.3.31"
indoc = "2.0.6"
log = "0.4.27"
proc-macro2 = "1.0.93"
quote = "1.0.38"
rust_decimal = "1.37.1"
syn = { version = "2.0.96", features = ["full"] }
tank-core = "0.1.0"
tank-duckdb = "0.1.0"
time = { version = "0.3.41", features = ["macros", "parsing"] }
uuid = "1.16.0"

[package]
name = "tank"
description = "Tank (Table Abstraction and Navigation Kit): the Rust data layer. A simple and extensible ORM for Rust"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
tank-core = "0.1.0"
tank-macros = "0.1.0"

[patch.crates-io]
tank-core = { path = "tank-core" }
tank-macros = { path = "tank-macros" }

[dev-dependencies]
indoc = { workspace = true }
regex = "1.11.1"
rust_decimal = { workspace = true }
time = { workspace = true }
tokio = { version = "1.44.2", features = ["full"] }
uuid = { workspace = true }
