[workspace]
members = [
    ".",
    "tank-core",
    "tank-duckdb",
    "tank-macros",
    "tank-postgres",
    "tank-sqlite",
    "tank-tests",
]

[workspace.package]
version = "0.4.0"
authors = ["barsdeveloper <barsdeveloper@gmail.com>"]
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/barsdeveloper/tank"
categories = ["database"]

[workspace.dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
env_logger = "0.11.8"
futures = "0.3.31"
indoc = "2.0.6"
log = "0.4.28"
proc-macro2 = "1.0.101"
quote = "1.0.40"
rust_decimal = "1.38.0"
syn = { version = "2.0.106", features = ["full"] }
tank.path = "."
tank-core.path = "tank-core"
tank-macros.path = "tank-macros"
time = { version = "0.3.44", features = ["macros", "parsing"] }
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread", "sync"] }
url = "2.5.7"
urlencoding = "2.1.3"
uuid = "1.18.1"

[package]
name = "tank"
description = "Tank (Table Abstraction and Navigation Kit): the Rust data layer. Simple and flexible ORM that allows to manage in a unified way data from different sources."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
tank-core.workspace = true
tank-macros.workspace = true

[dev-dependencies]
indoc.workspace = true
rust_decimal.workspace = true
time.workspace = true
tokio = { version = "1.44.2", features = ["full"] }
uuid.workspace = true

[patch.crates-io]
tank.path = "."
tank-core.path = "tank-core"
tank-macros.path = "tank-macros"
