[workspace]
members = [
    ".",
    "tank-core",
    "tank-duckdb",
    "tank-macros",
    "tank-postgres",
    "tank-sqlite",
    "tank-tests",
    # "tank-yourdb",
]

[workspace.package]
version = "0.9.0"
authors = ["barsdeveloper <barsdeveloper@gmail.com>"]
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/barsdeveloper/tank"
categories = ["database"]

[workspace.dependencies]
anyhow = { version = "1", features = ["backtrace"] }
env_logger = "0"
futures = "0"
indoc = "2"
log = "0"
proc-macro2 = "1"
quote = "1"
rust_decimal = "1"
syn = { version = "2", features = ["full"] }
tank = "0"
tank-core = "0"
tank-macros = "0"
time = { version = "0", features = ["macros", "parsing"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync"] }
url = "2"
urlencoding = "2"
uuid = "1"

[package]
name = "tank"
description = "Tank (Table Abstraction and Navigation Kit): the Rust data layer. Simple and flexible ORM that allows to manage in a unified way data from different sources."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
tank-core.workspace = true
tank-macros.workspace = true

[dev-dependencies]
indoc.workspace = true
rust_decimal.workspace = true
time.workspace = true
uuid.workspace = true

[patch.crates-io]
tank.path = "."
tank-core.path = "tank-core"
tank-macros.path = "tank-macros"
