[package]
name = "tank-core"
description = "Core of Tank: the Rust data layer. This is intended to be used by drivers to implement a backend, not directly"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3.6"
futures = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rust_decimal = { workspace = true }
syn = { workspace = true }
time = { workspace = true }
tokio = { version = "1.45.1", features = ["sync"] }
uuid = { workspace = true }
