[package]
name = "tank-core"
description = "Core of Tank: the Rust data layer. This is intended to be used by drivers to implement a backend."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-stream = "0.3.6"
atoi = "2.0.0"
futures.workspace = true
itoa = "1.0.15"
log.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rust_decimal.workspace = true
ryu = "1.0.20"
syn.workspace = true
time.workspace = true
tokio = { version = "1.47.1", features = ["sync"] }
uuid.workspace = true
