[package]
name = "tank-core"
description = "Core of Tank: the Rust data layer. This is intended to be used by drivers to implement a backend."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-stream = "0"
atoi = "2"
fast-float = "0"
futures.workspace = true
hex = "0"
indoc.workspace = true
itoa = "1"
log.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rust_decimal.workspace = true
ryu = "1"
syn.workspace = true
time.workspace = true
tokio = { version = "1", features = ["sync"] }
uuid.workspace = true
