[package]
name = "tank-duckdb"
description = "DuckDB driver implementation for Tank: the Rust data layer"
version = "0.2.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
flume = "0.11.1"
libduckdb-sys = { version = "1.3.0", features = ["bundled"] }
log = { workspace = true }
rust_decimal = { workspace = true }
tank-core = { version = "0.2.0" }
time = "0.3.41"
tokio = { workspace = true }
url = "2.5.4"
urlencoding = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tank-tests = { path = "../tank-tests" }
uuid = { workspace = true }
