[package]
name = "tank-duckdb"
description = "DuckDB driver implementation for Tank: the Rust data layer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true

[features]
default = ["bundled"]
bundled = ["libduckdb-sys/bundled"]

[dependencies]
flume = "0.11.1"
libduckdb-sys = "1.4.1"
log.workspace = true
rust_decimal.workspace = true
tank-core.workspace = true
time = "0.3.44"
tokio.workspace = true
url = "2.5.7"
urlencoding.workspace = true
uuid.workspace = true

[dev-dependencies]
tank-tests = { path = "../tank-tests" }
uuid.workspace = true
