[package]
name = "tank-duckdb"
description = "DuckDB driver implementation for Tank: the Rust data layer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true

[features]
default = ["bundled"]
bundled = ["libduckdb-sys/bundled"]

[dependencies]
async-stream.workspace = true
flume = "0"
libduckdb-sys = "1"
log.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true
tank-core.workspace = true
time.workspace = true
tokio.workspace = true
url = "2"
urlencoding.workspace = true
uuid.workspace = true

[dev-dependencies]
tank-tests = { path = "../tank-tests" }
uuid.workspace = true
