[package]
name = "tank-macros"
description = "Procedural macros for Tank: the Rust data layer. Not intended to be used directly."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = "0.7.1"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.96", features = ["full"] }
tank-core.workspace = true
