[package]
name = "tank-macros"
description = "Procedural macros for Tank: the Rust data layer. Not intended to be used directly."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = "0.7.1"
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full"] }
tank-core.workspace = true
