[package]
name = "tank-macros"
description = "Procedural macros for Tank: the Rust data layer. Not intended to be used directly."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = "0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
tank-core.workspace = true
