[package]
name = "tank-metadata"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
rust_decimal = { workspace = true }
syn = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
