[package]
name = "tank-postgres"
description = "Postgres driver implementation for Tank: the Rust data layer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
async-stream = "0"
byteorder = "1"
bytes = "1"
log.workspace = true
postgres-types = "0"
rust_decimal = { workspace = true, features = ["db-tokio-postgres"] }
tank-core.workspace = true
time.workspace = true
tokio.workspace = true
tokio-postgres = { version = "0", features = ["with-time-0_3", "with-uuid-1"] }
url.workspace = true
urlencoding.workspace = true
uuid.workspace = true

[dev-dependencies]
tank-tests = { path = "../tank-tests", features = ["disable-lists", "disable-maps"] }
testcontainers-modules = { version = "0", features = ["postgres"] }
tokio.workspace = true
