[package]
name = "tank-postgres"
description = "Postgres driver implementation for Tank: the Rust data layer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
async-stream.workspace = true
byteorder = "1"
bytes = "1"
log.workspace = true
native-tls = "0.2.14"
openssl = "0.10.75"
postgres-openssl = "0.5.2"
postgres-protocol = "0.6.9"
postgres-types = "0"
rust_decimal = { workspace = true, features = ["db-tokio-postgres"] }
tank-core.workspace = true
time.workspace = true
tokio.workspace = true
tokio-postgres = { version = "0", features = ["with-time-0_3", "with-uuid-1"] }
url.workspace = true
urlencoding.workspace = true
uuid.workspace = true

[dev-dependencies]
rcgen = "0.14.5"
tank-tests = { path = "../tank-tests", features = [
    "disable-large-integers",
    "disable-lists",
    "disable-maps",
    "disable-multiple-statements",
] }
testcontainers-modules = { version = "0", features = ["postgres"] }
tokio.workspace = true
