[package]
name = "tank-sqlite"
description = "SQLite driver implementation for Tank: the Rust data layer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
async-stream = "0.3.6"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
log.workspace = true
rust_decimal.workspace = true
tank-core.workspace = true
tokio.workspace = true
url.workspace = true
urlencoding.workspace = true
uuid.workspace = true

[dev-dependencies]
tank-tests = { path = "../tank-tests", features = ["disable-arrays", "disable-intervals", "disable-large-integers", "disable-lists", "disable-maps"] }
