[package]
name = "tank-tests"
description = "Test suide for drivers of Tank: the Rust data layer. This is intended to be used by drivers to implement common unit tests."
version = "0.3.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
rust_decimal = { workspace = true }
tank = { version = "0.3.0" }
time = { workspace = true }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { workspace = true }

[features]
default = ["disable-large-integers"]
disable-arrays = []
disable-duration = []
disable-large-integers = []
disable-lists = []
disable-maps = []
disable-ordering = []
disable-references = []
disable-transactions = []
